# backend/src/main/java/com/klabis/members/familygroup/infrastructure/restapi/FamilyGroupOpenApiConfig.java
@@ -1,15 +1,0 @@
-package com.klabis.members.familygroup.infrastructure.restapi;
-
-import com.klabis.members.familygroup.FamilyGroupId;
-import org.springdoc.core.utils.SpringDocUtils;
-import org.springframework.context.annotation.Configuration;
-
-import java.util.UUID;
-
-@Configuration
-public class FamilyGroupOpenApiConfig {
-
-    public FamilyGroupOpenApiConfig() {
-        SpringDocUtils.getConfig().replaceWithClass(FamilyGroupId.class, UUID.class);
-    }
-}
